# fullstack-chat-app

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css  tailwind.css
src/: app.rs  main.rs  router.rs
src/components/: mod.rs
src/models/: chat.rs  mod.rs
src/pages/: home.rs  login.rs  mod.rs
src/server/: mod.rs  routes.rs  state.rs
