[package]
name = "fullstack-chat-app"
version = "0.1.0"
authors = ["b.khatmullin <hatmullinbulat24@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
dioxus-free-icons = { version="0.10.0", features = ["bootstrap"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
serde = "1.0.228"
serde_json = "1.0.149"
gloo-storage = "0.3.0"
axum = { version = "0.8.8", features = ["ws", "json"], optional = true }
tokio = { version = "1.49.0", features = ["full"], optional = true }
tower-http = { version = "0.6.8", features = ["cors"], optional = true }
futures-util = { version = "0.3.31"}
gloo-net = "0.6.0"
web-sys = { version = "0.3.85", features = ["Window", "Location"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:tokio", "dep:axum", "dep:tower-http"]
